# file_defender

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  cspell.json  file_defender.code-workspace  install_vscode_extensions.ps1  install_vscode_extensions.sh  pyproject.toml
docs/: SAFETY_AND_SCOPE.md
python/: features.py  simulate_activity.py  train_isolation_forest.py  verify_parity.py
scripts/: setup_system_deps.sh  simulate_ransomware_lab.sh
src/collector/: fanotify_collector.c  fanotify_fid_collector.c  inotify_demo.c
src/common/: file_event.hpp
src/daemon/: anomaly_model.cpp  anomaly_model.hpp  feature_window.cpp  feature_window.hpp  main.cpp
src/ebpf/: file_monitor.bpf.c
testdata/: attack_scenario.csv  benign_baseline.csv  sample_events.csv
